<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!--Main-->
    <string name="welcome">Welcome to Telecommunication HES !</string>
    <!--Button -->
    <string name="delete">Delete</string>
<!--Title-->
    <string name="create">Create</string>
    <string name="modify">Modify</string>
<!-- nav-->
    <string name="app_name">Telecommunication HES</string>
    <string name="string_Client">Clients</string>
    <string name="string_Services">Services</string>
    <string name="string_Packages">Packages</string>
    <string name="string_location">Location</string>
    <string name="string_Languages">Languages</string>
    <string name="string_About">About</string>

    <!--About-->
    <string name="developped">Developped by Daniela Lourenço and Jaufray Sornette</string>

    <!-- String for drawer nav bar-->

    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>

    <!--Strings pour ajouter un contact-->
    <string name="name">Name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="addPackage">Add a package</string>
    <string name="street">Street</string>
    <string name="NPA">P. C.</string>
    <string name="city">City</string>
    <string name="Country">Country</string>

    <!--Create pack-->
    <string name="listservice">List of services</string>
    <string name="price">Price</string>
    <string name="totalPrice">Total price : </string>

    <!-- details pack -->
    <string name="discount">Discount</string>

    <string name="enter_price">Enter a price</string>
    <string name="main_menu">Main menu</string>

    <!-- Banner messages -->
    <string name="al_main_menu">You already are on the Main Menu</string>
    <string name="al_main_about">You already are in the About section</string>
    <string name="al_main_languages">You already are in the Language section</string>
    <string name="al_main_client">You already are in the Client section</string>
    <string name="al_main_service">You already are in the Service section</string>
    <string name="al_main_package">You already are in the Package section</string>

    <string name="al_service_delete">Service in use in some packages. Delete those first.</string>
    <string name="al_client_add">No Packages assigned. Either add a package or create one first.</string>




</resources>