<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:id="@+id/nav_menu_general">
    <item android:id="@+id/nav_main_menu" android:title="@string/main_menu" android:icon="@drawable/ic_menu_icon"/>
    <item android:id="@+id/nav_client" android:title="Client" android:icon="@drawable/ic_clients_icon"/>
    <item android:id="@+id/nav_service" android:title="Services" android:icon="@drawable/ic_service_icon"/>
    <item android:id="@+id/nav_package" android:title="@string/string_Packages" android:icon="@drawable/ic_package_icon"/>
</group>

<group android:id="@+id/nav_footer">
    <item android:id="@+id/nav_about" android:title="@string/string_About" android:icon="@drawable/ic_about_icon"/>
    <item android:id="@+id/nav_language" android:title="@string/string_Languages" android:icon="@drawable/ic_languages_icon"/>
</group>

</menu>