<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Create"
        android:textColor="#000000"
        android:fontFamily="@font/trebuc"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="457dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:fontFamily="@font/trebuc"
                android:inputType="text"
                android:paddingTop="@dimen/paddingTopBot"
                android:textSize="@dimen/textSize" />

            <EditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopBot"
                android:hint="@string/phoneNumber"
                android:textSize="@dimen/textSize"
                android:inputType="phone"
                android:fontFamily="@font/trebuc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addPackage"
                android:textAlignment="center"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:paddingBottom="@dimen/paddingTopBot"
                android:padding="@dimen/paddingTopBot"
                android:fontFamily="@font/trebuc"/>

            <ImageButton
                android:id="@+id/btn_add_package"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/add"
                android:background="@android:color/transparent"/>


            <EditText
                android:id="@+id/et_street"
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopBot"
                android:hint="@string/street"
                android:textSize="@dimen/textSize"
                android:inputType="text"
                android:fontFamily="@font/trebuc"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_npa"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:hint="@string/NPA"
                    android:inputType="number"
                    android:paddingTop="@dimen/paddingTopBot"
                    android:textSize="@dimen/textSize"
                    android:fontFamily="@font/trebuc"/>

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:paddingTop="@dimen/paddingTopBot"
                    android:textSize="@dimen/textSize"
                    android:fontFamily="@font/trebuc"/>


            </LinearLayout>

            <EditText
                android:id="@+id/et_country"
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:hint="@string/Country"
                android:inputType="text"
                android:paddingTop="@dimen/paddingTopBot"
                android:textSize="@dimen/textSize"
                android:fontFamily="@font/trebuc"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <!--Bouton valid-->
                <ImageButton
                    android:id="@+id/addC_btn_valid"
                    android:layout_width="@dimen/width"
                    android:layout_height="@dimen/height"
                    android:layout_marginBottom="@dimen/MarginButtom"
                    android:layout_marginLeft="@dimen/MarginLR"
                    android:layout_marginRight="25dp"
                    android:layout_weight="@dimen/weight"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_savebutton"
                    android:onClick="saveClient"/>

                <!--Bouton canel-->
                <ImageButton
                    android:id="@+id/addC_btn_cancel"
                    android:layout_width="@dimen/width"
                    android:layout_height="@dimen/height"
                    android:layout_marginBottom="@dimen/MarginButtom"
                    android:layout_marginRight="@dimen/MarginLR"
                    android:layout_weight="@dimen/weight"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_cancelbutton"
                    android:onClick="cancelClientAdd"/>




            </LinearLayout>

        </LinearLayout>

    </ScrollView>





    </LinearLayout>


</android.support.constraint.ConstraintLayout>