<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/create"
        android:textColor="#000000"
        android:fontFamily="@font/trebuc"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="460dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minHeight="517dp">

            <EditText
                android:id="@+id/et_name_service"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name"
                android:fontFamily="@font/trebuc"
                android:textSize="18sp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginBottom="30dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:id="@+id/et_description_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:hint="Description"
                android:gravity="center_vertical"
                android:fontFamily="@font/trebuc"
                android:textSize="18sp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginBottom="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/price_text"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:text="@string/price"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/trebuc"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_price_service"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:hint="..."
                    android:fontFamily="@font/trebuc"
                    android:textSize="18sp"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_toRightOf="@id/price_text"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="CHF"
                    android:gravity="center_vertical"
                    android:paddingRight="20dp"
                    android:fontFamily="@font/trebuc"
                    android:textSize="18sp"
                    android:layout_toRightOf="@id/et_price_service"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="100dp"
                    android:background="@drawable/ic_savebutton"
                    android:onClick="saveService"/>

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="100dp"
                    android:background="@drawable/ic_cancelbutton"
                    android:onClick="cancelServiceAdd"/>


            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>